# simple-spiders

./: .gitmodules
SeleniumProjects/: beijing.py  shiwusuo.py
crawl-porn/: .gitignore  main.py  main_lara.py  main_mark.py  main_rename.py  pyproject.toml  torrents.txt  torrents_1.txt  torrents_2.txt
crawl-porn/src/: core.py  settings.py
deepl-translation/: readme.md
deepl-translation/samples/: response_sentences.json
deepl-translation/scripts/alfred/: ds.py  main.py
deepl-translation/src/: const.py  core.py  ds.py  main.py
project_deepl/src/: main.py
wuhan_support/data_fetch/: dxy_01261246.json
zkj-neris.csrc.gov.cn-jsPost/dev/: req_cUrl.sh  req_cUrl_wo_compressed.sh  req_cUrl_wt_host.sh  req_charles.txt  req_headers_chrome.txt
zkj-neris.csrc.gov.cn-jsPost/src/: __init__.py  main.py
